--- a/buildandreleasetask/package.json
+++ b/buildandreleasetask/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +13,9 @@
     "azure-pipelines-task-lib": "^3.1.10"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.0",
     "@types/node": "^17.0.8",
-    "@types/q": "^1.5.5"
+    "@types/q": "^1.5.5",
+    "jest": "^27.4.7"
   }
 }
