--- a/buildandreleasetask/package.json
+++ b/buildandreleasetask/package.json
@@ -16,6 +16,7 @@
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.8",
     "@types/q": "^1.5.5",
+    "eslint": "^8.6.0",
     "jest": "^27.4.7"
   }
 }
