--- a/buildandreleasetask/package.json
+++ b/buildandreleasetask/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint --ext .ts,.json ."
   },
   "keywords": [],
   "author": "",
@@ -12,11 +13,32 @@
   "dependencies": {
     "azure-pipelines-task-lib": "^3.1.10"
   },
+  "lint-staged": {
+    "*.{js,ts,json}": "eslint"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged && npm test"
+    }
+  },
   "devDependencies": {
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.8",
     "@types/q": "^1.5.5",
-    "eslint": "^8.6.0",
+    "@typescript-eslint/eslint-plugin": "^4.17.0",
+    "@typescript-eslint/parser": "^4.17.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.2.0",
+    "eslint-plugin-json": "^2.1.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-unicorn": "^28.0.2",
+    "typescript": "^4.5.4",
+    "prettier": "^2.2.1",
     "jest": "^27.4.7"
   }
 }
