--- a/buildandreleasetask/package.json
+++ b/buildandreleasetask/package.json
@@ -10,9 +10,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "azure-pipelines-task-lib": "^3.1.10"
-  },
   "lint-staged": {
     "*.{js,ts,json}": "eslint"
   },
@@ -20,6 +17,9 @@
     "hooks": {
       "pre-commit": "lint-staged && npm test"
     }
+  },
+  "dependencies": {
+    "azure-pipelines-task-lib": "^3.1.10"
   },
   "devDependencies": {
     "@types/jest": "^27.4.0",
@@ -37,6 +37,8 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-unicorn": "^28.0.2",
+    "lint-staged": "^10.5.4",
+    "husky": "^4.3.8",
     "typescript": "^4.5.4",
     "prettier": "^2.2.1",
     "jest": "^27.4.7"
