--- a/buildandreleasetask/package.json
+++ b/buildandreleasetask/package.json
@@ -37,10 +37,12 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-unicorn": "^28.0.2",
-    "lint-staged": "^10.5.4",
     "husky": "^4.3.8",
-    "typescript": "^4.5.4",
+    "jest": "^26.5.3",
+    "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
-    "jest": "^27.4.7"
+    "ts-jest": "^26.5.3",
+    "typescript": "^4.5.4",
+    "ttypescript": "^1.5.12"
   }
 }
