--- a/buildandreleasetask/package.json
+++ b/buildandreleasetask/package.json
@@ -2,7 +2,11 @@
   "name": "buildandreleasetask",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist/*"
+  ],
   "scripts": {
     "test": "jest",
     "lint": "eslint --ext .ts,.json ."
@@ -27,6 +31,7 @@
     "@types/q": "^1.5.5",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
+    "del": "^6.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-config-standard": "^16.0.2",
@@ -42,7 +47,7 @@
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "ts-jest": "^26.5.3",
-    "typescript": "^4.5.4",
-    "ttypescript": "^1.5.12"
+    "ttypescript": "^1.5.12",
+    "typescript": "^4.5.4"
   }
 }
