--- a/buildandreleasetask/package.json
+++ b/buildandreleasetask/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "azure-pipelines-task-lib": "^3.1.10",
+    "joi": "^17.6.0",
     "node-fetch": "^2.6.1"
   },
   "devDependencies": {
