--- a/buildandreleasetask/package.json
+++ b/buildandreleasetask/package.json
@@ -8,6 +8,7 @@
     "dist/*"
   ],
   "scripts": {
+    "build": "tsc",
     "test": "jest --detectOpenHandles",
     "lint": "eslint --ext .ts,.json ."
   },
@@ -25,13 +26,13 @@
   "dependencies": {
     "azure-pipelines-task-lib": "^3.1.10",
     "joi": "^17.6.0",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "@types/node-fetch": "^2.5.10",
+    "@types/q": "^1.5.5"
   },
   "devDependencies": {
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.8",
-    "@types/node-fetch": "^2.5.10",
-    "@types/q": "^1.5.5",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
     "del": "^6.0.0",
