--- a/buildandreleasetask/tsconfig.json
+++ b/buildandreleasetask/tsconfig.json
@@ -13,7 +13,7 @@
     "esModuleInterop": true,
     "lib": ["es2019"]
   },
-  "exclude": ["node_modules", "dist"],
+  "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*test*.ts"],
   "skipLibCheck": true,
   "forceConsistentCasingInFileNames": true
 }
