--- a/buildandreleasetask/package.json
+++ b/buildandreleasetask/package.json
@@ -14,7 +14,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "GPL-3.0-or-later",
   "lint-staged": {
     "*.{js,ts,json}": "eslint"
   },
